--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <table>
     <tr><strong>Please Start Hexcode With "#"</strong></tr>
     <tr>
+      <td><label for="gradient_direction">Direction : </label></td>
+      <td><input type="text" placeholder="for ex : (top, right, bottom, left)" id="gradient_direction"></td>
+    </tr>
+    <tr>
       <td><label for="first_hex">First Hex Code : </label></td>
       <td><input type="text" id="first_hex"></td>
     </tr>
